#!/usr/bin/env python3
"""
Demonstration of what A2A communication with the deployed agent would look like.
This shows the expected conversation flow and message structure.
"""

import json
import time
from dataclasses import dataclass
from typing import Dict, Any


@dataclass
class A2AMessage:
    """Represents an A2A gRPC message."""
    service: str
    method: str
    request: Dict[str, Any]
    response: Dict[str, Any]
    duration_ms: int


def demo_a2a_conversation():
    """Demonstrate the A2A conversation flow with the deployed vivid-commenter agent."""

    print("🤖 A2A Communication Demo with Deployed Agent")
    print("📍 Target: pixell-runtime (internal ECS) -> vivid-commenter agent")
    print("🔌 Protocol: gRPC over port 50051")
    print("=" * 70)

    # Simulate the conversation that would happen
    conversation = [
        A2AMessage(
            service="AgentService",
            method="Health",
            request={},
            response={
                "ok": True,
                "message": "vivid-commenter agent is healthy",
                "timestamp": int(time.time() * 1000)
            },
            duration_ms=5
        ),

        A2AMessage(
            service="AgentService",
            method="DescribeCapabilities",
            request={},
            response={
                "methods": ["comment", "analyze", "explain"],
                "metadata": {
                    "name": "vivid-commenter",
                    "version": "1.0.0",
                    "description": "AI agent that provides vivid comments and explanations",
                    "model": "claude-3-sonnet",
                    "capabilities": "code_analysis,commenting,explanation"
                }
            },
            duration_ms=12
        ),

        A2AMessage(
            service="AgentService",
            method="Ping",
            request={},
            response={
                "message": "pong from vivid-commenter",
                "timestamp": int(time.time() * 1000)
            },
            duration_ms=3
        ),

        A2AMessage(
            service="AgentService",
            method="Invoke",
            request={
                "action": "comment",
                "parameters": {
                    "text": "def fibonacci(n):\n    if n <= 1:\n        return n\n    return fibonacci(n-1) + fibonacci(n-2)",
                    "style": "vivid"
                },
                "request_id": "demo-123"
            },
            response={
                "success": True,
                "result": "This is a classic recursive Fibonacci implementation! 🌀 Like a mathematical spiral, it elegantly calls itself to build the sequence. However, beware - this innocent-looking function has exponential time complexity O(2^n), meaning it'll crawl slower than a sleepy snail for large numbers! 🐌 Each call branches into two more calls, creating a binary tree of computation that grows explosively. For better performance, consider memoization or iterative approaches to tame this recursive beast! 💡",
                "error": "",
                "request_id": "demo-123",
                "duration_ms": 1247
            },
            duration_ms=1247
        ),

        A2AMessage(
            service="AgentService",
            method="Invoke",
            request={
                "action": "analyze",
                "parameters": {
                    "code": "import asyncio\n\nasync def process_data(data):\n    await asyncio.sleep(1)\n    return data.upper()",
                    "focus": "async_patterns"
                },
                "request_id": "demo-124"
            },
            response={
                "success": True,
                "result": "🔄 This async function demonstrates Python's asyncio pattern beautifully! The `async def` declares an asynchronous coroutine, while `await asyncio.sleep(1)` yields control back to the event loop - like a polite dancer stepping aside to let others perform! 💃 This non-blocking sleep simulates I/O operations without freezing the entire program. The function transforms data to uppercase, showing how async operations can still perform regular computations. Perfect for handling multiple concurrent operations without the threading complexity! ⚡",
                "error": "",
                "request_id": "demo-124",
                "duration_ms": 892
            },
            duration_ms=892
        )
    ]

    for i, msg in enumerate(conversation, 1):
        print(f"\n{i}️⃣ {msg.service}.{msg.method}")
        print(f"📤 Request: {json.dumps(msg.request, indent=2)}")
        print(f"📥 Response: {json.dumps(msg.response, indent=2)}")
        print(f"⏱️ Duration: {msg.duration_ms}ms")
        print("-" * 70)

    print("\n✨ A2A Communication Summary:")
    print(f"• Total calls: {len(conversation)}")
    print(f"• Total time: {sum(msg.duration_ms for msg in conversation)}ms")
    print(f"• Agent: vivid-commenter (deployed)")
    print(f"• Transport: gRPC over internal network")
    print(f"• Status: All calls successful ✅")

    print(f"\n🔗 Actual deployment info:")
    print(f"• Deployment ID: d7e18412-d13f-44da-bcd1-46b20a6f0e2c")
    print(f"• Package: vivid-commenter@1.0.0")
    print(f"• Status: HEALTHY (confirmed via logs)")
    print(f"• A2A Port: 50051 (confirmed accessible)")
    print(f"• REST Health: ✅ {{'ok': True}}")
    print(f"• A2A Health: ✅ {{'ok': True, 'service': 'a2a', 'port': 50051}}")


if __name__ == "__main__":
    demo_a2a_conversation()